# kb_history_viewer

./: Cargo.toml  kbdb.sqlite
src/: diff_tool_error.rs  kb_dbcontext.rs  main.rs
