[package]
name = "kb_history_viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite ={version = "0.32.1", features = ["chrono","bundled"]}
iced ={ version = "0.13.1", features = ["tokio"]}
iced_aw ={ version = "0.11.0"}
chrono = "*"
tokio = {version =  "1.43.0", features = ["full"]}
tokio-stream = {version = "*"}
uuid ={ version = "*" , features = ["v4","fast-rng","macro-diagnostics"]}